# tetris_project

./: .gitignore  ADVANCED_GREEDY_README.md  IMPROVED_GREEDY_README.md  README.md  compare_algorithms.py  pyproject.toml  test_advanced_greedy.py  test_improved_greedy.py
src/: main.py  test_improved_greedy.py  train.py  view_play.py
src/antoine/: linear_approch.py  states_helper.py  train.py  view_player.py
src/antoine/evolution/: evolution_approch.py  helper.py  train_evo.py  view_player.py
src/helper/: reward_functions.py  wrapper.py
src/tetris_code/: evaluate_policy_greedy.py  evaluate_policy_greedy_advanced.py  evaluate_policy_greedy_improved.py  play_tetris.py  policies.py  policies_advanced.py  policies_improved.py  view_episode_policy_down.py  view_episode_policy_greedy.py  view_episode_policy_greedy_advanced.py  view_episode_policy_greedy_improved.py  view_episode_policy_random.py
src/wrapper/: action.py  obs.py  reward.py  verify_wrapper.py
